# pyproject_cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: LICENSE  Makefile  README.md  environment.yml
{{cookiecutter.project_name}}/tests/acceptance_tests/: context.py
{{cookiecutter.project_name}}/tests/unit_tests/: context.py
{{cookiecutter.project_slug}}/: mkdocs.yml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: discussions.md  index.md  reference.md  tutorials.md
{{cookiecutter.project_slug}}/docs/how_to/: developers.md  users.md
{{cookiecutter.project_slug}}/tests/: __init__.py  context.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.pymodule_name}}/: .coveragerc  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.pymodule_name}}/.circleci/: config.yml
{{cookiecutter.pymodule_name}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.pymodule_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_of_an_existing_feature.md  new_feature_request.md
{{cookiecutter.pymodule_name}}/docs/: .pages  changelog.md  discussions.md  how_to_guides.md  index.md  reference.md  tutorials.md
{{cookiecutter.pymodule_name}}/docs/ADRs/: introduction.md
{{cookiecutter.pymodule_name}}/docs/discussions/: how_is_this_different_from_xyz.md
{{cookiecutter.pymodule_name}}/docs/how_to/: developers.md  users.md
{{cookiecutter.pymodule_name}}/docs/how_to_guides/: installation.md  running_the_tests.md  setting_up_dev_environment.md
{{cookiecutter.pymodule_name}}/docs/tutorials/: .pages  first_steps.ipynb  first_steps.md
{{cookiecutter.pymodule_name}}/docs__BAK/: tutorials.md
{{cookiecutter.pymodule_name}}/docs__BAK/ADRs/: README.md
{{cookiecutter.pymodule_name}}/notebooks/: Example_test_notebook.ipynb  context.py
{{cookiecutter.pymodule_name}}/ssh_deploy_keys/: README.md
{{cookiecutter.pymodule_name}}/tests/: __init__.py  test_{{cookiecutter.pymodule_name}}.py
{{cookiecutter.pymodule_name}}/{{cookiecutter.pymodule_name}}/: __init__.py
