[tool.black]
line-length = 120

[tool.poetry]
name = "{{ cookiecutter.pymodule_name }}"
version = "{{ cookiecutter.project_version }}"
description = ""
license = "{{ cookiecutter.license }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "*"
pytest-cov = "*"
ipython = "*"
jupyterlab = "*"
mkdocs = "*"
mkdocs-material = "*"
mktheapidocs = {extras = ["plugin"], version = "*"}
nbval = "*"
pre-commit = "*"
versioneer = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
