[tool.black]
line-length = 120

[tool.poetry]
name = "{{ cookiecutter.pymodule_name }}"
version = "{{ cookiecutter.project_version }}"
description = ""
license = "{{ cookiecutter.license }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.7"

black = { version = "^19.10b0", optional = true }
pre-commit = { version = "*", optional = true }
ipython = { version = "*", optional = true }
jupyterlab = { version = "*", optional = true }

mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mknotebooks = { version = "*", optional = true }
mktheapidocs = { version = "*", extras = ["plugin"], optional = true}

nbval = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-cov = { version = "*", optional = true }

twine = { version = "*", optional = true }
wheel = { version = "*", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
develop = ["black", "pre-commit", "ipython", "jupyterlab"]
testing = ["pytest", "pytest-cov", "nbval"]
docs = ["mkdocs", "mkdocs-material", "mknotebooks", "mktheapidocs"]
deploy = ["twine", "wheel"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
